<package>
    <name>maslam</name>
    <version>0.0.1</version>
    <description>

        This package is an ROS wrapper of ORB_SLAM2.

    </description>
    <author> Xuesong Shi </author>
    <author>xuesong.shi@intel.com</author>
    <maintainer email="xuesong.shi@intel.com">Xuesong Shi</maintainer>
    <license>BSD</license>

    <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>message_filters</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>hfnet_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>eigen</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>hfnet_msgs</run_depend>
    <run_depend>message_filters</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>eigen</run_depend>

    <test_depend>rosbag</test_depend>
</package>
